# thunar

./: .project  HACKING  configure.ac.in
icons/16x16/: Makefile.am
icons/24x24/: Makefile.am
icons/scalable/: Makefile.am
plugins/thunar-uca/: thunar-uca-editor.c  thunar-uca-model.c  thunar-uca-provider.c
po/: POTFILES.in
thunar/: Makefile.am  thunar-abstract-icon-view.c  thunar-abstract-icon-view.h  thunar-application.c  thunar-compact-view.c  thunar-dbus-service-infos.xml  thunar-dbus-service.c  thunar-details-view.c  thunar-details-view.h  thunar-dialogs.c  thunar-dnd.c  thunar-file.c  thunar-gtk-extensions.c  thunar-gtk-extensions.h  thunar-history.c  thunar-icon-renderer.c  thunar-launcher.c  thunar-launcher.h  thunar-location-bar.c  thunar-location-button.c  thunar-location-buttons.c  thunar-menu.c  thunar-menu.h  thunar-preferences-dialog.c  thunar-progress-dialog.c  thunar-renamer-dialog.c  thunar-settings  thunar-settings.desktop.in  thunar-shortcuts-pane.c  thunar-shortcuts-view.c  thunar-standard-view-ui.xml  thunar-standard-view.c  thunar-standard-view.h  thunar-stock.c  thunar-tree-view.c  thunar-view.c  thunar-window-menus.ui  thunar-window.c  thunar-window.h
thunarx/: thunarx-menu-item.c  thunarx-menu.c  thunarx-menu.h
