appsdir = $(datadir)/icons/hicolor/16x16/apps
apps_DATA =								\
	Thunar.png

stockdir = $(datadir)/icons/hicolor/16x16/stock/navigation
stock_DATA =								\
	thunar-folder-copy.png					\
	thunar-folder-move.png

EXTRA_DIST =								\
	$(apps_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
