iconsdir = $(datadir)/icons/hicolor/24x24/apps
icons_DATA =								\
	Thunar.png

stockdir = $(datadir)/icons/hicolor/24x24/stock/navigation
stock_DATA =								\
	thunar-folder-move.png					\
	thunar-folder-copy.png

EXTRA_DIST =								\
	$(icons_DATA)							\
	$(stock_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
