iconsdir = $(datadir)/icons/hicolor/scalable/apps
icons_DATA =								\
	Thunar.svg

stockdir = $(datadir)/icons/hicolor/scalable/stock/navigation
stock_DATA =								\
	thunar-folder-move.svg					\
	thunar-folder-copy.svg

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
